공통(cm) -- 작업 중

--- a/src/html/common/SCR_GA_CM_0201_T02.html
+++ b/src/html/common/SCR_GA_CM_0201_T02.html
@@ -31,56 +31,14 @@
                         <section>
                             <div class="gc-tab">
                                 <ul>
-                                    <li><a href="#" class="active">옵션정보</a></li>
-                                    <li><a href="#">차량사용법</a></li>
+                                    <li><a href="#">옵션정보</a></li>
+                                    <li><a href="#" class="active">차량사용법</a></li>
                                     <li><a href="#">그린댓글</a></li>
                                 </ul>
                                 <span class="tab-indicator"></span>
                             </div>
                             <div class="">
-                                <section>
-                                    <h3>기본정보</h3>
-                                    <ul>
-                                        <li>
-                                            <span class="">차종</span>
-                                            <span class="">SUV</span>
-                                        </li>
-                                        <li>
-                                            <span class="">연료</span>
-                                            <span class="">경유</span>
-                                        </li>
-                                        <li>
-                                            <span class="">승차인원</span>
-                                            <span class="">5명</span>
-                                        </li>
-                                    </ul>
-                                </section>
-								<section>
-									<h3>기본정보</h3>
-									<h4>내장</h4>
-									<ul class="list sm">
-										<li>전동 백미러</li>
-										<li>열선시트</li>
-									</ul>
-									<h4>안전</h4>
-									<ul class="list sm">
-										<li>후방카메라</li>
-										<li>에어백</li>
-										<li>후방감시센서</li>
-										<li>ADAS (긴급제동시스템)</li>
-									</ul>
-									<h4>안전</h4>
-									<ul class="list sm">
-										<li>내비게이션</li>
-										<li>하이패스</li>
-										<li>AV시스템</li>
-										<li>블루투스</li>
-										<li>GPS</li>
-										<li>USB단자</li>
-										<li>블랙박스</li>
-									</ul>
-								</section>
-
+                              
                             </div>
                         </section>
                     </div>
