--- a/src/status.html
+++ b/src/status.html
@@ -2612,7 +2612,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T01.html">SCR_GA_CM_0201_T01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2626,7 +2626,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T02.html">SCR_GA_CM_0201_T02.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2639,8 +2639,8 @@
 							<td></td>
 							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/common.SCR_GA_CM_0201_T03.html">SCR_GA_CM_0201_T03.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T03.html">SCR_GA_CM_0201_T03.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
