공통(cm) -- 작업 중

--- a/src/html/common/SCR_GA_CM_0301_T01.html
+++ b/src/html/common/SCR_GA_CM_0301_T01.html
@@ -29,7 +29,29 @@
             <section id="container">
                 <div class="contents">
                     <div class="cm">
-                        <section></section>
+                        <section>
+                            <div class="parking-lot-info">
+                                <div class="img"><img src="/images/dumm/img_way_to_03.png" alt="" /></div>
+                                <div class="info">
+                                    <div class="location">
+                                        <div class="text">서울 용산구 한남동 522-44</div>
+                                        <button class="btn icon">
+                                            <i class="ico copy sm"></i>
+                                        </button>
+                                    </div>
+                                    <div class="btn-group">
+                                        <button class="btn round line md">
+                                            <i class="ico map-pin lg"></i>
+                                            <span class="text">길찾기</span>
+                                        </button>
+                                        <button class="btn round line md">
+                                            <i class="ico favorite-fill lg"></i>
+                                            <span class="text">즐겨찾기</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                         <hr class="divider" />
                         <section>
                             <div class="gc-tab">
@@ -60,7 +82,6 @@
                                     <hr class="divider-thin" />
                                     <h3>출입방식</h3>
                                     <strong>한남유수지공영주차장</strong>
-
                                 </section>
                             </div>
                         </section>
