제휴처 수정

--- a/src/html/benefit/SCR_GA_BN_0401_P01.html
+++ b/src/html/benefit/SCR_GA_BN_0401_P01.html
@@ -11,13 +11,18 @@
 	<div class="layer-body">
 			
 		<div class="partner-detail">
-			<div class="group more">
-				<p class="category">식음료</p>
-				<p class="data">20% 할인</p>
+			<!-- 20220915 -->
+			<div class="img-group">
 				<span class="thum-img">
 					<img src="/images/contents/img_partner_d_thum01.png" alt="">
 				</span>
+				<div class="cont-module">
+					<p class="title">제이드가든</p>
+					<p class="category">식음료</p>
+					<p class="data">20% 할인</p>
+				</div>
 			</div>
+			<!-- //20220915 -->
 			<div class="group">
 				<p class="category">운영시간</p>
 				<p class="data">09:00 ~ 18:00</p>
@@ -42,7 +47,7 @@
 		</div>
 	
 	</div>
-	<div class="layer-footer full">
+	<div class="layer-footer">
 		<div class="btn-wrap">
 			<div class="btn-group">
 				<button type="button" class="btn xl">20% 할인 혜택 받기</button>
