--- a/src/status.html
+++ b/src/status.html
@@ -1218,7 +1218,9 @@
 							<td><a target="_blank" href="components/popup_module.html#benefit#SCR_GA_BN_0401_P01#bottom">SCR_GA_BN_0401_P01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220915
+							</td>
                             <td></td>
                         </tr>
                         <tr>
