--- a/src/status.html
+++ b/src/status.html
@@ -1538,12 +1538,26 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>주소검색</td>
+                            <td>주소변경</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1101_P02.html">SCR_GA_CI_1101_P02.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+						<tr>
+                            <td></td>
+                            <td></td>
+                            <td>주소검색</td>
+                            <td></td> 
+                            <td></td>
+                            <td>이민우</td>
+                            <td>/mypage</td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1101_P02_01.html">SCR_GA_CI_1101_P02_01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
