--- a/src/html/mypage/SCR_GA_CI_1101_P02.html
+++ b/src/html/mypage/SCR_GA_CI_1101_P02.html
@@ -41,6 +41,17 @@
 								</div>
 							</div>
 						</div>
+						
+						<div class="toast-pop active">
+							<div class="toast-container">
+								<div class="module">
+									<p class="message">
+										주소를 변경하였습니다.
+									</p>
+								</div>
+							</div>
+						</div>
+						
 					</div>
 
 					@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"주소 변경하기"})
